# rinha-backend-2024-q1

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose-release.yaml  docker-compose.yaml  pom.xml
.cargo/: config.toml
.github/workflows/: main.yaml  publish-docker-image.yaml
config/: envoy.yaml
src/: main.rs  models.rs  persistence.rs  telemetry.rs
src/api/: app.rs  routes.rs
src/api/routes/: statement.rs  transaction.rs
src/persistence/: database.rs  repository.rs
src/persistence/database/: postgres.rs
src/persistence/database/postgres/: repository.rs  statements_cache.rs
