[package]
name = "rinha"
version = "0.1.0"
edition = "2021"

[features]
telemetry = [
  "axum/tower-log",
  "axum/tracing",
  "dep:tower-http",
  "dep:tower-request-id",
  "dep:tracing",
  "dep:tracing-subscriber",
  "tokio/tracing",
  "tower/log",
  "tower/tracing",
  "tower-http/trace",
  "tower-http/tracing",
]

[dependencies]
axum = { version = "0.7.4", default-features = false, features = [
  "http2",
  "json",
  "tokio",
] }
bb8-postgres = "0.8.1"
hyper = { version = "1.2.0", features = ["http2", "server"] }
hyper-util = { version = "0.1.3", features = ["tokio", "server-auto", "http2"] }
postgres-types = { version = "0.2.6", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
simd-json = { version = "0.13.8", default-features = false, features = [
  "serde_impl",
] }
tokio = { version = "1.36.0", features = [
  "macros",
  "rt-multi-thread",
], default-features = false }
tower = { version = "0.4.13", default-features = false }
tower-http = { version = "0.5.1", optional = true }
tower-request-id = { version = "0.3.0", optional = true }
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }

[dev-dependencies]
http-body-util = "0.1.0"
rstest = "0.18.2"

[profile.release]
strip = "debuginfo"
lto = true
codegen-units = 1
panic = "abort"
